fix gap hamburguer

--- a/src/app/_components/Header/HamburgerComponent/index.module.scss
+++ b/src/app/_components/Header/HamburgerComponent/index.module.scss
@@ -11,7 +11,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 9px;
+  gap: 6px;
 }
 
 .hamburgerButton {
